# tree-sitter-spml

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  WHAT_THE_FUCK.spml  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  taglib-core.tld  test.sh  tree-sitter.json  unseq.js
bindings/c/: spml.h  tree-sitter-spml.pc  tree-sitter-spml.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/attribute/: expected.txt  test.spml
test/barcode/: expected.txt  test.spml
test/calendarsheet/: expected.txt  test.spml
test/checkbox/: expected.txt  test.spml
test/code/: expected.txt  test.spml
test/collection/: expected.txt  test.spml
test/comment/: expected.txt  test.spml
test/condition/: expected.txt  test.spml
test/corpus/: comment.txt  custom_tag.txt  header.txt  html.txt  java.txt  sp_barcode.txt  sp_calendarsheet.txt  sp_checkbox.txt  sp_code.txt  sp_collection.txt  sp_condition.txt  sp_diff.txt  sp_error.txt  sp_expire.txt  sp_filter.txt  sp_for.txt  sp_form.txt  sp_hidden.txt  sp_include.txt  sp_io.txt  sp_iterator.txt  sp_json.txt  sp_linkedInformation.txt  sp_linktree.txt  sp_livetree.txt  sp_log.txt  sp_login.txt  sp_loop.txt  sp_map.txt  sp_password.txt  sp_print.txt  sp_querytree.txt  sp_radio.txt  sp_range.txt  sp_return.txt  sp_sass.txt  sp_scaleimage.txt  sp_scope.txt  sp_search.txt  (+39 more)
(+103 files in other folders)
