[package]
name = "tree-sitter-spml"
description = "spml grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "spml"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/DrWursterich/tree-sitter-spml"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26.3"

[build-dependencies]
cc = "1.1"
